--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,16 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
+paginate: 6
+paginate_path: "/page:num/"
+
 # Build settings
 theme: minima
 google_analytics: G-HCE26MS255
 plugins:
   - jekyll-feed
+  - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default.
